--- a/siteweb-501/src/App.css
+++ b/siteweb-501/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+/* ==> Header */
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-image: url('../public/headerImage.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center;
+  color: white;
+  padding: 20px;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: center; 
+}
+
+h1 {
+  color: white;
+  font-size: 400%;
+}
+
+.customButton {
+  border: none;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 0.5em;
+  max-width: 20vh;
+  display: inline-block;
+  text-align: center;
+  font-weight: bold;
+  transition: all 250ms ease-in-out;
+}
+
+.mainButton {
+  background-color: white;
+  color: black;
+}
+
+.mainButton:hover {
+  background-color: black;
+  color: white;
+  border: solid 1px white;
+}
+
+.secondButton {
+  margin: 20px;
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.secondButton:hover {
+  background-color: white;
+  color: black;
+  border: solid 1px black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.divTitle {
+  text-align: start;
+  max-width: 100vh;
 }
+
+/* ==> Filtrage */
