--- a/siteweb-501/src/App.css
+++ b/siteweb-501/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .App-logo {
@@ -35,4 +36,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.containerMapFormation {
+  display: flex;
+  flex-direction: column;
+}
+
+.containerListCard {
+  display: flex;
+  flex-wrap: wrap;
 }
