--- a/siteweb-501/src/components/card/card.module.css
+++ b/siteweb-501/src/components/card/card.module.css
@@ -6,6 +6,7 @@
     margin: 10px;
     box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.25);
     width: 350px;
+    height:100px;
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("../../assets/images/bgCard.svg");
