--- a/siteweb-501/src/App.css
+++ b/siteweb-501/src/App.css
@@ -38,6 +38,7 @@ h1 {
   text-align: center;
   font-weight: bold;
   transition: all 250ms ease-in-out;
+  cursor: pointer;
 }
 
 .mainButton {
@@ -88,6 +89,7 @@ fieldset {
   display: flex;
   gap: 1rem;
   align-items: center;
+}
 
 
 .containerMapFormation {
