--- a/siteweb-501/src/pages/home/home.module.css
+++ b/siteweb-501/src/pages/home/home.module.css
@@ -42,6 +42,7 @@
   .containerMapFormation {
     display: flex;
     flex-direction: column;
+    margin: 0 25px 15px;
   }
   
   .containerListCard {
