--- a/siteweb-501/src/components/FilterCarte/FilterCarte.module.css
+++ b/siteweb-501/src/components/FilterCarte/FilterCarte.module.css
@@ -6,7 +6,7 @@
 
 input[type="text"] {
     padding: 10px;
-    border: black solid 2px;
+    border: #adadad solid 1px;
     border-radius: 10px;
     width: 25%;
     background-image: url("../../assets/images/loupe.png");
