--- a/siteweb-501/src/components/MainHeader/MainHeader.module.css
+++ b/siteweb-501/src/components/MainHeader/MainHeader.module.css
@@ -19,9 +19,10 @@ h1 {
 }
 
 .mainButton {
+  box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.25);
   border: none;
   text-decoration: none;
-  padding: 10px;
+  padding: 20px;
   border-radius: 0.5em;
   max-width: 20vh;
   display: inline-block;
@@ -30,18 +31,22 @@ h1 {
   transition: all 250ms ease-in-out;
   background-color: white;
   color: black;
+  cursor: pointer;
+  border: none;
 }
 
 .mainButton:hover {
   background-color: black;
   color: white;
-  border: solid 1px white;
 }
 
 .secondButton {
   border: none;
+  cursor: pointer;
+  box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.25);
+  border: none;
   text-decoration: none;
-  padding: 10px;
+  padding: 20px;
   border-radius: 0.5em;
   max-width: 20vh;
   display: inline-block;
@@ -56,7 +61,6 @@ h1 {
 .secondButton:hover {
   background-color: white;
   color: black;
-  border: solid 1px black;
 }
 
 .divTitle {
