--- a/siteweb-501/src/pages/detail/detail.module.css
+++ b/siteweb-501/src/pages/detail/detail.module.css
@@ -1,5 +1,5 @@
 .detail {
-  margin: 1rem;
+  margin: 0 25px;
 }
 
 .containerMapFormation {
@@ -14,13 +14,6 @@
 
   .containerMap {
     margin: 25px;
-  }
-
-  .backButton {
-    border-radius: 15px;
-    background-color: #B059B1;
-    padding: 10px 15px;
-    cursor: pointer;
   }
 
   .titleDetail {
@@ -45,6 +38,10 @@
     max-height: 350px;
   }
 
+  .containerContentTitle {
+    flex: 1;
+  }
+
   .backButton {
     border-radius: 15px;
     background-color: #B059B1;
@@ -52,6 +49,16 @@
     cursor: pointer;
   }
 
-  .containerContentTitle {
-    flex: 1;
+  .backButton {
+    border-radius: 50%;
+    background-color: #B059B1;
+    cursor: pointer;
+    border: none;
+    font-size: 20px;
+    color: white;
+    padding: 0;
+  }
+
+  .backButton svg {
+    margin: 10px 12px;
   }
