--- a/siteweb-501/src/components/card/card.module.css
+++ b/siteweb-501/src/components/card/card.module.css
@@ -32,7 +32,7 @@
   
 .card p {
   margin: 10px 0;
-  font-size: 1rem;
+  font-size: 12px;
   width: fit-content;
 }
 
@@ -41,10 +41,13 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  max-width: 80%;
+  max-width: 70%;
 }
 
 .containerButtonCard {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
   display: flex;
   justify-content: flex-end;
 }
