--- a/siteweb-501/src/pages/home/home.module.css
+++ b/siteweb-501/src/pages/home/home.module.css
@@ -1,26 +1,51 @@
-.container {
-  text-align: center;
-  margin-left: 4rem;
-  margin-right: 4rem;
-}
+.App {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
   
-.logoGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  gap: 20px;
-  margin-top: 20px;
-}
- 
-.logoItem {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 150px;
-  width: 150px;
-}
+  .App-logo {
+    height: 40vmin;
+    pointer-events: none;
+  }
   
-.logoImage {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
-}
+  @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+    }
+  }
+  
+  .App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
+  
+  .App-link {
+    color: #61dafb;
+  }
+  
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  
+  .containerMapFormation {
+    display: flex;
+    flex-direction: column;
+    margin: 0 25px 15px;
+  }
+  
+  .containerListCard {
+    display: flex;
+    flex-wrap: wrap;
+  }
