--- a/siteweb-501/src/components/MainHeader/MainHeader.module.css
+++ b/siteweb-501/src/components/MainHeader/MainHeader.module.css
@@ -1,6 +1,6 @@
 .AppHeader {
   background-image: url('../../assets/images/headerImage.png');
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
   text-align: center;
