--- a/siteweb-501/src/pages/home/home.module.css
+++ b/siteweb-501/src/pages/home/home.module.css
@@ -1,3 +1,21 @@
+.paragraphe {
+  font-size: 1.2rem;
+  line-height: 1.8;
+  text-align: justify;
+  margin: 2rem 4rem;
+  padding: 1rem;
+  background-color: #ffdff8;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.hr {
+  border: 0;
+  border-top: 2px solid #ccc;
+  margin: 2rem 4rem;
+}
+
+
 .container {
   text-align: center;
   margin-left: 4rem;
