--- a/siteweb-501/src/components/card/card.module.css
+++ b/siteweb-501/src/components/card/card.module.css
@@ -32,7 +32,7 @@
   
 .card p {
   margin: 10px 0;
-  font-size: 12px;
+  font-size: 1rem;
   width: fit-content;
 }
 
@@ -41,13 +41,10 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  max-width: 70%;
+  max-width: 80%;
 }
 
 .containerButtonCard {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
   display: flex;
   justify-content: flex-end;
 }
