affichage filtre recherche + affichage etablissement detail

--- a/siteweb-501/src/pages/options/options.module.css
+++ b/siteweb-501/src/pages/options/options.module.css
@@ -1,6 +1,7 @@
 .containerMapFormation {
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
   
   .containerListCard {
