--- a/siteweb-501/src/pages/pro/pro.module.css
+++ b/siteweb-501/src/pages/pro/pro.module.css
@@ -5,6 +5,7 @@
 .containerMapFormation {
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
   
   .containerListCard {
