--- a/src/pages/listeG&T/listeG&T.module.css
+++ b/src/pages/listeG&T/listeG&T.module.css
@@ -1,44 +1,3 @@
-.App {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-  
   .containerMapFormation {
     display: flex;
     flex-direction: column;
@@ -63,4 +22,13 @@
 
   .backButton svg {
     margin: 10px 12px;
+  }
+
+  .noDataResult {
+    display: flex;
+    justify-content: center;
+    height: 200px;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: 600
   }
