--- a/src/components/admin/List.module.css
+++ b/src/components/admin/List.module.css
@@ -2,7 +2,6 @@
     background-color: #f3f0ff;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     margin: 20px auto;
   }
@@ -21,6 +20,7 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    flex-wrap: wrap;
   }
   
   .buttonList {
@@ -32,12 +32,25 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
-  
-  .buttonList:hover {
+
+    .buttonList:hover {
     background-color: #7b5cbb; 
   }
-  
 
+  .buttonListDelete:hover {
+    background-color: #b30a0a; 
+  }
+
+  .buttonListDelete {
+    background-color: #ff3c3c;
+    color: #fff;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
   .addButtonList {
     background-color: #4d34b4;
     color: #fff;
@@ -52,5 +65,20 @@
   
   .addButtonList:hover {
     background-color: #39269b;
+  }
+
+  .titleItemList{
+    max-width: 300px;
+  }
+
+
+  @media (max-width:500px){
+    .listItem{
+      justify-content: center;
+    }
+
+    .titleItemList{
+      text-align: center;
+    }
   }
   
