--- a/src/pages/AdminSpace/AdminDashboard.module.css
+++ b/src/pages/AdminSpace/AdminDashboard.module.css
@@ -7,6 +7,7 @@
   max-width: 800px;
   margin: 20px auto;
   font-family: "Arial", sans-serif;
+  display: grid;
 }
 
 .titleDashboard {
@@ -16,9 +17,11 @@
 
 .navDashboard {
   display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin: 20px 0;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  max-width: 400px;
+  margin: auto;
 }
 
 .navDashboard button {
@@ -44,4 +47,89 @@
   color: #4d34b4;
   text-align: center;
   font-size: 24px;
+}
+
+.popupOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.popupContent {
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  width: 400px;
+  max-width: 90%;
+  display: grid;
+}
+
+.popupContent label {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.popupContent input,
+.popupContent textarea,
+.popupContent select {
+  width: 100%;
+  padding: 0.5rem;
+  margin-top: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-image: none;
+}
+
+.popupActions {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.popupActions button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.popupActions button[type="submit"] {
+  background: #4caf50;
+  color: white;
+}
+
+.popupActions button[type="button"] {
+  background: #f44336;
+  color: white;
+}
+
+
+.popupButton{
+    background-color: #9b7ce4;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 16px;
+}
+
+.popupButton:hover {
+  background-color: #7b5cbb;
+}
+
+
+@media (max-width:550px){
+  .titleDashboard{
+    font-size: 2rem;
+  }
 }
