--- a/src/components/FilterForm/FilterForm.module.css
+++ b/src/components/FilterForm/FilterForm.module.css
@@ -140,3 +140,41 @@ span {
   flex: 0.8;
   gap: 1rem;
 }
+
+@media screen and (max-width: 600px) {
+  .containerEtablissementInput {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  
+  .filtreFiliere {
+    flex-direction: column;
+    align-items: stretch;
+    box-sizing: border-box;
+    gap: 10px;
+  }
+
+  input[type="text"] {
+    display: block;
+    width: 85%;
+    margin: 0.5rem 0;
+  }
+
+  input[type="range"] {
+    text-align: center;
+    width: 100%;
+  }
+
+  .submitButton,
+  .resetButton {
+    display: block;
+    margin: 0;
+    margin-bottom: 10px;
+    width: 100%;
+  }
+
+  form {
+    width: 100%;
+    max-width: 100%;
+  }
+}
