--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -5,7 +5,7 @@
   margin: 10px;
   box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.25);
   width: 350px;
-  height:120px;
+  height: 120px;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -64,11 +64,13 @@
 }
 
 .containerButtonCard {
-  display: flex;
-  justify-content: flex-end;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
 
 .containerButtonCard button, .containerButtonCard a {
+  display: inline-block;
   background-color: black;
   padding: 10px 20px;
   border-radius: 0 0 12px 0;
@@ -120,8 +122,8 @@
   height: 20px;
   width: 20px;
   background-color: transparent;
-  border-radius: 4px; /* Coins arrondis pour correspondre au style de la carte */
-  border: 2px solid black; /* Bordure de la case */
+  border-radius: 4px;
+  border: 2px solid black;
   transition: background-color 0.3s, border-color 0.3s;
 }
 
@@ -153,4 +155,11 @@
 .keyWord {
   font-weight: normal;
   font-size: 0.8rem !important;
+}
+
+
+@media screen and (max-width: 600px) {
+  .card {
+    width: 100%;
+  }
 }
