--- a/src/components/listCard/listCard.module.css
+++ b/src/components/listCard/listCard.module.css
@@ -14,3 +14,9 @@
     align-items: center;
     justify-content: center;
   }
+
+@media screen and (max-width: 600px) {
+  .cardContainer {
+    width: 100%;
+  }
+}
