--- a/src/pages/spePremiere/spePremiere.module.css
+++ b/src/pages/spePremiere/spePremiere.module.css
@@ -1,44 +1,56 @@
 .containerMapFormation {
-    display: flex;
-    flex-direction: row;
-  }
+  display: flex;
+  flex-direction: row;
+}
   
-  .containerListCard {
+.containerListCard {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.containerMap {
+  width: 100%;
+  margin: 25px;
+}
+
+.backButton {
+  border-radius: 15px;
+  background-color: #B059B1;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.backButton {
+  border-radius: 50%;
+  background-color: #B059B1;
+  cursor: pointer;
+  border: none;
+  font-size: 20px;
+  color: white;
+  padding: 0;
+}
+
+.backButton svg {
+  margin: 10px 12px;
+}
+
+.containerSpe {
+  margin: 0 25px;
+}
+
+.containerListCard {
+  padding: 20px;
+  max-height: 450px;
+  overflow: scroll;
+}
+
+@media screen and (max-width: 600px) {
+  .containerMapFormation {
     display: flex;
-    flex-wrap: wrap;
-  }
-
-  .containerMap {
-    margin: 25px;
-  }
-
-  .backButton {
-    border-radius: 15px;
-    background-color: #B059B1;
-    padding: 10px 15px;
-    cursor: pointer;
-  }
-
-  .backButton {
-    border-radius: 50%;
-    background-color: #B059B1;
-    cursor: pointer;
-    border: none;
-    font-size: 20px;
-    color: white;
-    padding: 0;
-  }
-
-  .backButton svg {
-    margin: 10px 12px;
+    flex-direction: column;
   }
 
   .containerSpe {
-    margin: 0 25px;
+    margin: 0;
   }
-
-  .containerListCard {
-    padding: 20px;
-    max-height: 450px;
-    overflow: scroll;
-  }
+}
