--- a/src/pages/spePremiere/spePremiere.module.css
+++ b/src/pages/spePremiere/spePremiere.module.css
@@ -6,11 +6,15 @@
 .containerListCard {
   display: flex;
   flex-wrap: wrap;
+  flex: 1.5;
+  height: 550px;
+  overflow-y: scroll;
 }
 
 .containerMap {
-  width: 100%;
   margin: 25px;
+  flex: 1;
+  width: 100%;
 }
 
 .backButton {
@@ -39,7 +43,6 @@
 }
 
 .containerListCard {
-  padding: 20px;
   max-height: 450px;
   overflow: scroll;
 }
@@ -48,6 +51,17 @@
   .containerMapFormation {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .containerListCard {
+    width: 100%;
+    overflow: visible;
+  }
+
+  .containerListCard div {
+    width: 100%;
   }
 
   .containerSpe {
