--- a/src/pages/pro/pro.module.css
+++ b/src/pages/pro/pro.module.css
@@ -3,39 +3,44 @@
 }
 
 .containerMapFormation {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
   
-  .containerListCard {
-    display: flex;
-    flex-wrap: wrap;
-  }
+.containerListCard {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-  .containerMap {
-    margin: 25px;
-  }
+.containerMap {
+  margin: 25px;
+}
 
-  .backButton {
-    border-radius: 50%;
-    background-color: #B059B1;
-    cursor: pointer;
-    border: none;
-    font-size: 20px;
-    color: white;
-    padding: 0;
-  }
+.backButton {
+  border-radius: 50%;
+  background-color: #B059B1;
+  cursor: pointer;
+  border: none;
+  font-size: 20px;
+  color: white;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .backButton svg {
-    margin: 10px 12px;
-  }
+.backButton svg {
+  margin: 0;
+  font-size: 24px;
+}
 
-  .noDataResult {
-    display: flex;
-    justify-content: center;
-    height: 200px;
-    align-items: center;
-    font-size: 1.5rem;
-    font-weight: 600
-  }
+.noDataResult {
+  display: flex;
+  justify-content: center;
+  height: 200px;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: 600
+}
