--- a/src/pages/techno/techno.module.css
+++ b/src/pages/techno/techno.module.css
@@ -1,32 +1,37 @@
 .containerMapFormation {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  
-  .containerListCard {
-    display: flex;
-    flex-wrap: wrap;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
-  .containerMap {
-    margin: 25px;
-  }
+.containerListCard {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-  .backButton {
-    border-radius: 50%;
-    background-color: #B059B1;
-    cursor: pointer;
-    border: none;
-    font-size: 20px;
-    color: white;
-    padding: 0;
-  }
+.containerMap {
+  margin: 25px;
+}
 
-  .backButton svg {
-    margin: 10px 12px;
-  }
+.backButton {
+  border-radius: 50%;
+  background-color: #B059B1;
+  cursor: pointer;
+  border: none;
+  font-size: 20px;
+  color: white;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .containerTechno {
-    margin: 0 25px;
-  }
+.backButton svg {
+  margin: 0;
+  font-size: 24px;
+}
+
+.containerTechno {
+  margin: 0 25px;
+}
