--- a/src/components/admin/AddEditForm.module.css
+++ b/src/components/admin/AddEditForm.module.css
@@ -74,8 +74,12 @@
   
   .checkboxGroup {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     margin-bottom: 15px;
+    flex-direction: column;
+    align-items: flex-start;
+    max-height: 100px;
+    overflow-y: scroll;
   }
   
   .checkboxItem {
