--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,7 +1,7 @@
 .card {
   position: relative;
   border-radius: 13px;
-  padding: 20px 10px 10px 20px;
+  padding: 20px 10px 20px 20px;
   margin: 10px;
   box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.25);
   width: 350px;
@@ -13,6 +13,14 @@
   justify-content: space-between;
 }
 
+.miniCard {
+  height: 27px;
+}
+
+.linkToSpe {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
 .greenBg {
   background-image: url("../../assets/images/bgGreenCard.svg");
 }
@@ -117,7 +125,7 @@
 /* Crée une case personnalisée */
 .checkmark {
   position: absolute;
-  top: 10px;
+  top: 13px;
   left: -30px;
   height: 20px;
   width: 20px;
