--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -75,6 +75,7 @@
   position: absolute;
   bottom: 10px;
   right: 10px;
+  width: 115px;
 }
 
 .containerButtonCard button, .containerButtonCard a {
