--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -68,7 +68,6 @@
   bottom: 10px;
   right: 10px;
 }
-
 .containerButtonCard button, .containerButtonCard a {
   display: inline-block;
   background-color: black;
@@ -81,13 +80,14 @@
   box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
   cursor: pointer;
   text-decoration: none;
+  padding-left: 35px;
 }
 
-.containerButtonCard a {
+.siteButton {
   background-image: url("../../assets/images/sortieSite.png");
   background-repeat: no-repeat;
   background-position: 7px 9px;
-  background-size: 20px 20px; 
+  background-size: 20px 20px;
   padding-left: 35px;
 }
 
