--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -76,6 +76,8 @@
   bottom: 10px;
   right: 10px;
   width: 120px;
+  display: flex;
+  justify-content: flex-end;
 }
 .containerButtonCard button, .containerButtonCard a {
   display: inline-block;
