--- a/src/pages/detail/detail.module.css
+++ b/src/pages/detail/detail.module.css
@@ -26,7 +26,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: start;
+  margin: 2%;
 }
 
 .containerDetail {
