--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -93,6 +93,9 @@
   text-decoration: none;
 }
 
+.ContainerButtonMiniStyle {
+  bottom: 12px;
+}
 .siteButton {
   background-image: url("../../assets/images/sortieSite.png");
   background-repeat: no-repeat;
